fix: cube alignment

--- a/src/components/cubeImage.css
+++ b/src/components/cubeImage.css
@@ -3,7 +3,7 @@
   display: block;
   margin: auto;
   background: none !important;
-  padding: 5rem 0rem 5rem 0rem;
+  padding: 10rem 0rem 5rem 0rem;
 }
 .cube {
   width: 300px;
